IRtest_out/while.err
irs/while.ll:21:29: error: invalid getelementptr indices
  %v19 = getelementptr i32, i32* %v16, i32 0, i32 0
                            ^
1 error generated.
